@@ -23,8 +23,6 @@ rectN defines the size of the smoothing stencil in N-th dimension.
 */
 #include <rsf.h>
 
-#include "divn.h"
-
 int main (int argc, char* argv[])
 {
     int n1,n2, i1,i2, i, n12, niter, dim, n[SF_MAX_DIM], rect[SF_MAX_DIM];
@@ -92,8 +90,8 @@ int main (int argc, char* argv[])
 	den[i] *= mean;
     }
 
-    divn_init(dim, n12, n, rect, niter, true);
-    divn (num, den, phase);
+    sf_divn_init(dim, n12, n, rect, niter, true);
+    sf_divn (num, den, phase);
 
     if (hertz) {
 	/* convert to Hertz */    
